Revert from using URI constructor back to using URL constructor from string